force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <description>QFR Viability Responses</description>
    <label>Response</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>