force-app/main/default/objects/Response__c/fields/Care_or_Services__c.field-meta.xml
<CustomField>
    <fullName>Care_or_Services__c</fullName>
    <description>What kind of care or service/s are contracted to the organisation under the business structure.</description>
    <label>Care or Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Care</fullName>
            </value>
            <value>
                <fullName>Personal Care</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Diversional Therapy</fullName>
            </value>
            <value>
                <fullName>Lifestyle/Recreation/Activities Officer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>