force-app/main/default/objects/Response__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>The Form that the response was given in. </description>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>