force-app/main/default/objects/Response__c/fields/Other_Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Structure__c</fullName>
    <description>Text field for explanation of what &apos;other business structure&apos; the organisation uses.</description>
    <label>Other Business Structure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>