force-app/main/default/objects/Response__c/fields/Other_Care_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Care_Services__c</fullName>
    <description>Text box for explanation of what other types of care/services the organisation provides when selecting the Other checkbox in the services section.</description>
    <label>Other Care Services</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>