force-app/main/default/objects/Response__c/fields/QA_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Comments__c</fullName>
    <label>QA External Comments</label>
    <type>TextArea</type>
</CustomField>