force-app/main/default/objects/Response__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <formula>Question_Library__r.Question_Category__r.Name</formula>
    <label>Question Category</label>
    <type>Text</type>
</CustomField>