force-app/main/default/objects/Response__c/fields/Question_Library__c.field-meta.xml
<CustomField>
    <fullName>Question_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Library</label>
    <referenceTo>Question_Library__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>