force-app/main/default/objects/Response__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resi Care</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>