force-app/main/default/objects/Response__c/fields/Response_Options__c.field-meta.xml
<CustomField>
    <fullName>Response_Options__c</fullName>
    <label>Response Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>x</fullName>
                <isActive>false</isActive>
                <label>x</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>