force-app/main/default/objects/Response__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <formula>Question_Library__r.Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>