force-app/main/default/objects/Response__c/recordTypes/Home_Care.recordType-meta.xml
<RecordType>
    <fullName>Home_Care</fullName>
    <active>true</active>
    <label>Home Care</label>
</RecordType>