force-app/main/default/objects/Response__c/recordTypes/Resi_Care.recordType-meta.xml
<RecordType>
    <fullName>Resi_Care</fullName>
    <active>true</active>
    <label>Resi Care</label>
</RecordType>