force-app/main/default/objects/Response__c/validationRules/If_QA_Outcome_Rejected_must_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>If_QA_Outcome_Rejected_must_Comment</fullName>
    <active>true</active>
    <description>If a viability response has been &apos;Rejected&apos;, must populate QA Comment box</description>
    <errorConditionFormula>AND(
ISPICKVAL(QA__c, &apos;Reject&apos;),
ISBLANK(QA_Comments__c)
)</errorConditionFormula>
    <errorMessage>If a response has been &apos;Rejected&apos;, the QA Comment field must be populated</errorMessage>
</ValidationRule>