force-app/main/default/objects/Response__c/validationRules/QA_Status_must_be_Reject_to_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Status_must_be_Reject_to_Comment</fullName>
    <active>true</active>
    <description>Stop QA Assessors from adding QA External comments when the status of the QA Outcome is not &quot;Reject&quot;.</description>
    <errorConditionFormula>AND(
     NOT(ISPICKVAL(QA__c, &quot;Reject&quot;)), NOT(ISBLANK(QA_Comments__c))
   )</errorConditionFormula>
    <errorMessage>A QA Assessor can add an External comment only for rejected responses</errorMessage>
</ValidationRule>