force-app/main/default/objects/Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question_Library__c</columns>
    <columns>Case__c</columns>
    <columns>Question_Category__c</columns>
    <columns>Form__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Response_Options__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>